Clean up comments and whitespace in abusing_language.ipynb
Remove redundant comments and unnecessary blank lines in the `get_all_comments` function to streamline the code.

--- a/abusing_language.ipynb
+++ b/abusing_language.ipynb
@@ -59,12 +59,10 @@
         "def get_all_comments(video_id):\n",
         "    api_service_name = \"youtube\"\n",
         "    api_version = \"v3\"\n",
-        "    DEVELOPER_KEY = 'process.env.DEVELOPER_KEY'  # Replace with your actual API key\n",
-        "\n",
+        "    DEVELOPER_KEY = 'process.env.DEVELOPER_KEY' \n",
         "    youtube = googleapiclient.discovery.build(\n",
         "        api_service_name, api_version, developerKey=DEVELOPER_KEY)\n",
         "\n",
-        "    # Initial request to get comments\n",
         "    request = youtube.commentThreads().list(\n",
         "        part=\"snippet\",\n",
         "        videoId=video_id,\n",
